# metashapes

./: Example.ipynb  Generator_test.ipynb  pyproject.toml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/2026-06-08/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/2026-06-08_2/: .graphify_labels.json  manifest.json
metashapes/: __init__.py  analysis.py  transform.py  unit_cell.py
metashapes/adapters/: __init__.py  numpy.py  shapely.py  torch.py  yaml.py
metashapes/adapters/shapely/: booleans.py  conics.py  dispatch.py  helpers.py  junctions.py  polygons.py  quads.py  raster.py  transforms.py
metashapes/generators/: __init__.py  base.py  config.py  random.py  registry.py  report.py  validator.py
metashapes/generators/samplers/: __init__.py  base.py  conics.py  junctions.py  periodic.py  polygons.py  quads.py  utils.py
metashapes/lattice/: basis.py  canvas.py  grid.py  unit_cell.py
metashapes/shape/: base.py  boolean.py  primitives.py  registry.py  transforms.py  utils.py
metashapes/shape/primitives/: __init__.py  conics.py  junctions.py  periodic.py  polygons.py  quads.py
src/metashapes/: __init__.py  analysis.py  transform.py
tests/: test_analysis.py
tests/adapters/: test_shapely.py  test_shapely_safe_extraction.py  test_yaml.py
tests/generators/: test_random_generator.py
tests/lattice/: conftest.py  test_basis.py  test_unit_cell.py  test_unit_cell_center.py
tests/shape/: conftest.py  test_conics.py  test_junctions.py  test_periodic.py  test_polygons.py  test_quads.py
(+40 files in other folders)
